--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@astrojs/mdx": "^1.0.0",
     "@astrojs/rss": "^2.4.3",
     "@astrojs/tailwind": "^5.0.0",
+    "@directus/sdk": "^12.0.1",
     "@tailwindcss/typography": "^0.5.9",
     "astro": "^3.0.0",
     "astro-icon": "^0.8.1",
     "dateformat": "^5.0.3",
+    "marked": "^9.1.2",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
